Added subterms to the construcion of TEMUD_dD.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -374,17 +374,17 @@
     "\\begin{align}\n",
     "\\partial_j T^{j}_{{\\rm EM} i} &= \\partial_j (\\gamma_{ki} T^{kj}_{\\rm EM}) \\\\\n",
     "&= \\partial_j [\\gamma_{ki} (b^2 u^j u^k + \\frac{b^2}{2} g^{jk} - b^j b^k)] \\\\\n",
-    "&= \\gamma_{ki,j} T^{kj}_{\\rm EM} + \\gamma_{ki} \\left( \\underbrace{\\partial_j \\left(b^2 u^j u^k\\right)}_{\\rm Term\\ 1} + \\underbrace{\\partial_j \\left(\\frac{b^2}{2} g^{jk}\\right)}_{\\rm Term\\ 2} - \\underbrace{\\partial_j \\left(b^j b^k\\right)}_{\\rm Term\\ 3} \\right) \\\\\n",
+    "&= \\underbrace{\\gamma_{ki,j} T^{kj}_{\\rm EM}}_{\\rm Term\\ 1} + \\gamma_{ki} \\left( \\underbrace{\\partial_j \\left(b^2 u^j u^k\\right)}_{\\rm Term\\ 2} + \\underbrace{\\partial_j \\left(\\frac{b^2}{2} g^{jk}\\right)}_{\\rm Term\\ 3} - \\underbrace{\\partial_j \\left(b^j b^k\\right)}_{\\rm Term\\ 4} \\right) \\\\\n",
     "\\end{align}\n",
     "Following the product and chain rules for each term (and recalling that $b^2 = \\gamma_{ij} b^i b^j$, so $\\partial_k b^2 = \\gamma_{ij,k} b^i b^j + \\gamma_{ij} b^i_{,k} b^j + \\gamma_{ij} b^i b^j_{,k} = \\gamma_{ij,k} b^i b^j + 2 b_j b^j_{,k}$), we find that \n",
     "\\begin{align}\n",
-    "{\\rm Term\\ 1} &= \\partial_j (b^2 u^j u^k) \\\\\n",
+    "{\\rm Term\\ 2} &= \\partial_j (b^2 u^j u^k) \\\\\n",
     "              &= \\partial_j b^2 u^j u^k + b^2 \\partial_j u^j u^k + b^2 u^j \\partial_j u_k \\\\\n",
     "              &= \\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right) u^k u^k + b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} \\\\\n",
-    "{\\rm Term\\ 2} &= \\partial_j \\left(\\frac{b^2}{2} g^{jk}\\right) \\\\\n",
+    "{\\rm Term\\ 3} &= \\partial_j \\left(\\frac{b^2}{2} g^{jk}\\right) \\\\\n",
     "              &= \\frac{1}{2} \\left( \\partial_j b^2 g^{jk} + b^2 \\partial_j g^{jk} \\right) \\\\\n",
     "              &= \\frac{1}{2}\\left(\\gamma_{lm,j} b^l b^m + 2 b_l b^l_{,j}\\right)g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} \\\\\n",
-    "{\\rm Term\\ 3} &= \\partial_j (b^j b^k) \\\\\n",
+    "{\\rm Term\\ 4} &= \\partial_j (b^j b^k) \\\\\n",
     "              &= b^j_{,j} b^k + b^j b^k_{,j}\\\\\n",
     "\\end{align}\n",
     "\n",
@@ -670,34 +670,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now add $${\\rm Term\\ 2} = \\gamma_{ki} \\left( b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j} \\right)$$ to $\\partial_j  T^{j}_{{\\rm EM} i}$. These are the terms that involve contractions over $k$ (but no metric derivatives like Term 1 had). \n"
+    "We will now add $${\\rm Term\\ 2} = \\gamma_{ki} \\left( \\underbrace{b^2 u^j_{,j} u^k}_{\\rm Term\\ 2a} + \\underbrace{b^2 u^j u^k_{,j}}_{\\rm Term\\ 2b} + \\underbrace{\\frac{b^2}{2} g^{jk}_{\\ ,j}}_{\\rm Term\\ 2c} + \\underbrace{b^j_{,j} b^k}_{\\rm Term\\ 2d} + \\underbrace{b^j b^k_{,j}}_{\\rm Term\\ 2e} \\right)$$ to $\\partial_j  T^{j}_{{\\rm EM} i}$. These are the terms that involve contractions over $k$ (but no metric derivatives like Term 1 had). \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
+      "\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            # Term 2\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*(smallb2*uU_dD[j][j]*uU[k]+smallb2*uU[j]*uU_dD[k][j]+\\\n",
-    "                                                smallb2*gSpatialUU_dD[j][k][j]/2+smallbU_dD[j][j]*smallbU[k+1]+\\\n",
-    "                                                smallbU[j+1]*smallbU_dD[k][j])\n"
+    "            # Term 2a: \\gamma_{ki} b^2 u^j_{,j} u^k\n",
+    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*uU_dD[j][j]*uU[k]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            # Term 2b: \\gamma_{ki} b^2 u^j u^k_{,j}\n",
+    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*uU[j]*uU_dD[k][j]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            # Term 2c: \\gamma_{ki} \\frac{b^2}{2} g^{jk}_{\\ ,j}\n",
+    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*gSpatialUU_dD[j][k][j]/2\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            # Term 2d: \\gamma_{ki} b^j_{,j} b^k\n",
+    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallbU_dD[j][j]*smallbU[k+1]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            # Term 2e: \\gamma_{ki} b^j b^k_{,j}\n",
+    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallbU[j+1]*smallbU_dD[k][j]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will add $${\\rm Term\\ 3} = 2 b_l b^l_{,j} \\gamma_{ki} \\left( u^j u^k +  g^{jk} \\right),$$ which involves contractions over $k$ and $l$."
+    "Now, we will add $${\\rm Term\\ 3} = 2 b_l b^l_{,j} \\gamma_{ki} \\left( \\underbrace{u^j u^k}_{\\rm Term\\ 3a} + \\underbrace{g^{jk}}_{\\rm Term\\ 3b} \\right),$$ which involves contractions over $k$ and $l$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,20 +748,38 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                # Term 3\n",
-    "                TEMUD_dD[j][i][j] += 2*smallbD[l]*smallbU_dD[l][j]*gammaDD[k][i]*(uU[j]*uU[k]+g4UU[j+1][k+1])\n"
+    "                # Term 3a: 2 b_l b^l_{,j} \\gamma_{ki} u^j u^k + \n",
+    "                TEMUD_dD[j][i][j] += 2*smallbD[l]*smallbU_dD[l][j]*gammaDD[k][i]*uU[j]*uU[k]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                # Term 3b: 2 b_l b^l_{,j} \\gamma_{ki} g^{jk}\n",
+    "                TEMUD_dD[j][i][j] += 2*smallbD[l]*smallbU_dD[l][j]*gammaDD[k][i]*g4UU[j+1][k+1]\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "\n",
+    "import GiRaFFE_HO.GiRaFFE_Higher_Order as gho\n",
+    "gho.GiRaFFE_Higher_Order()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        print(sp.simplify(TEMUD_dD[j][i][j]-gho.TEMUD_dD[j][i][j]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will add contractions over $k$, $l$, and $m$: $${\\rm Term\\ 4} = \\gamma_{ki} \\gamma_{lm,j} b^l b^m \\left( u^j u^k + \\frac{1}{2} g^{jk} \\right)$$"
+    "Finally, we will add contractions over $k$, $l$, and $m$: $${\\rm Term\\ 4} = \\gamma_{ki} \\gamma_{lm,j} b^l b^m \\left( \\underbrace{u^j u^k}_{\\rm Term\\ 4a} + \\underbrace{\\frac{1}{2} g^{jk}}_{\\rm Term\\ 4b} \\right)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,9 +788,16 @@
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
     "                for m in range(DIM):\n",
-    "                    # Term 4\n",
-    "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallbU[l+1]*smallbU[m+1]*(uU[j]*uU[k]\\\n",
-    "                                                                                                      +g4UU[j+1][k+1])\n"
+    "                    # Term 4a: \\gamma_{ki} \\gamma_{lm,j} b^l b^m u^j u^k\n",
+    "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallbU[l+1]*smallbU[m+1]*uU[j]*uU[k]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                for m in range(DIM):\n",
+    "                    # Term 4b: \\gamma_{ki} \\gamma_{lm,j} b^l b^m \\frac{1}{2} g^{jk}\n",
+    "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallbU[l+1]*smallbU[m+1]*g4UU[j+1][k+1]\n"
    ]
   },
   {
@@ -749,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,45 +964,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
-      "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "alphau0 - gho.alphau0 = 0\n",
-      "alpsqrtgam - gho.alpsqrtgam = 0\n",
-      "AevolParen - gho.AevolParen = 0\n",
-      "psi6Phi_rhs - gho.psi6Phi_rhs = 0\n",
-      "uD[0] - gho.uD[0] = 0\n",
-      "uU[0] - gho.uU[0] = 0\n",
-      "PevolParenU[0] - gho.PevolParenU[0] = 0\n",
-      "Stilde_rhsD[0] - gho.Stilde_rhsD[0] = 0\n",
-      "A_rhsD[0] - gho.A_rhsD[0] = 0\n",
-      "StildeD[0] - gho.StildeD[0] = 0\n",
-      "uD[1] - gho.uD[1] = 0\n",
-      "uU[1] - gho.uU[1] = 0\n",
-      "PevolParenU[1] - gho.PevolParenU[1] = 0\n",
-      "Stilde_rhsD[1] - gho.Stilde_rhsD[1] = 0\n",
-      "A_rhsD[1] - gho.A_rhsD[1] = 0\n",
-      "StildeD[1] - gho.StildeD[1] = 0\n",
-      "uD[2] - gho.uD[2] = 0\n",
-      "uU[2] - gho.uU[2] = 0\n",
-      "PevolParenU[2] - gho.PevolParenU[2] = 0\n",
-      "Stilde_rhsD[2] - gho.Stilde_rhsD[2] = 0\n",
-      "A_rhsD[2] - gho.A_rhsD[2] = 0\n",
-      "StildeD[2] - gho.StildeD[2] = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reset the list of gridfunctions, as registering a gridfunction\n",
     "#   twice will spawn an error.\n",
@@ -962,13 +994,6 @@
     "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n",
     "    print(\"StildeD[\"+str(i)+\"] - gho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gho.StildeD[i]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
