Added more subterms to the construcion of TEMUD_dD.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -232,7 +232,7 @@
     "Now we will contruct the other components of $g_{\\mu\\nu,l}$. We will first construct \n",
     "$$ g_{i0,l} = g_{0i,l} = \\beta_{i,l}, $$\n",
     "then\n",
-    "$$ g_{i,l} = \\gamma_{ij,l} $$"
+    "$$ g_{ij,l} = \\gamma_{ij,l} $$"
    ]
   },
   {
@@ -675,30 +675,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -742,7 +721,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
