--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -13,15 +13,20 @@
     "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
     "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
     "\\end{align}\n",
-    "(the unspecified components are set to 0). Here, $C_0$ is a constant set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform it into the quantities actually tracked by $\\giraffe$ and HydroBase: $A_i$, $B^i$, $S_i$, $v^i$, and $\\Phi$. This can be done with eqs. 14, 16, and 18, here given in that same order:\n",
+    "(the unspecified components are set to 0). Here, $C_0$ is a constant that we will set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform the above into the quantities actually tracked by $\\giraffe$ and HydroBase: $A_i$, $B^i$, $\\tilde{S}_i$, $v^i$, and $\\Phi$. Of these quantities, $\\gf$ will only set $A_i$, $v^i$, and $\\Phi=0$; $\\giraffe$ itself will call functions to set $B^i$ and $\\tilde{S}_i$ before the time-evolution begins. This can be done with eqs. 16 and 18, here given in that same order:\n",
     "\\begin{align}\n",
-    "S_\\mu &= -n_\\nu T^\\nu_{{\\rm EM} \\mu} \\\\\n",
     "v^i &= \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
     "\\end{align}\n",
-    "-Is this a circular dependency? $\\tilde{S}_\\mu$ depends on $T^\\nu_{{\\rm EM} \\mu}$ which depends on the velocity, but the velocity depends on $\\tilde{S}_\\mu$.\n",
-    "\n",
-    "**Zach says:** Check out lines 98-131 in the [original GiRaFFEfood implementation of ExactWald](https://bitbucket.org/zach_etienne/wvuthorns/src/62866e19058cd2477ee88d3a7fb259d5cfc2781a/GiRaFFEfood/src/ExactWald.cc?at=master&fileviewer=file-view-default). You will see that only $A_i$ and $v^i=u^i/u^0$ (not the Valencia 3-velocity that we must specify) are set. Then in the [ID\\_Converter\\_GiRaFFE](https://bitbucket.org/zach_etienne/wvuthorns/src/62866e19058cd2477ee88d3a7fb259d5cfc2781a/ID_converter_GiRaFFE/src/set_GiRaFFE_metric_GRMHD_variables_based_on_HydroBase_and_ADMBase_variables.C?at=master&fileviewer=file-view-default), $B^i$ and $\\tilde{S}_i$ are set based on these quantities. I think that we should have in our version of GiRaFFE a function that computes $\\tilde{S}_i$ from $B^i$, $v^i$, and metric quantities."
+    "In the simulations, $B^i$ will be calculated numerically from $A_i$; however, it will be useful to analytically calculate $B^i$ to use calculating the initial $v^i$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Steps 0-1: Preliminaries\n",
+    "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
    ]
   },
   {
@@ -52,19 +57,18 @@
     "par.initialize_param(par.glb_param(\"char\", thismodule, \"IDchoice\", \"Exact_Wald\"))\n",
     "\n",
     "# Step 1b: Set Cparameters we need to use and the gridfunctions we'll need.\n",
-    "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole, and pi in C\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
-    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n"
+    "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole, and pi in C\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will first build the fundamental vectors $A_i$ and $E_i$ in spherical coordinates. Note that we use reference_metric.py to set $r$ and $\\theta$ in terms of Cartesian coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)).\n",
+    "### Step 2: Set the vectors A and E in Spherical coordinates\n",
+    "We will first build the fundamental vectors $A_i$ and $E_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use reference_metric.py to set $r$ and $\\theta$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. Since $C_0 = 1$,\n",
     "\\begin{align}\n",
-    "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
-    "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
+    "A_{\\phi} &= \\frac{1}{2} r^2 \\sin^2 \\theta \\\\\n",
+    "E_{\\phi} &= 2 M \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta. \\\\\n",
     "\\end{align}\n",
     "While we have $E_i$ set as a variable in NRPy+, note that the final C code won't store these values."
    ]
@@ -97,7 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian $$ \\frac{\\partial x_i}{\\partial y_j}, $$ where $x_i \\in \\{r,\\theta,\\phi\\}$ and $y_i \\in \\{x,y,z\\}$. We will also compute its inverse. Then, since both $A_i$ and $E_i$ have one lower index, both will need to be multiplied by the Jacobian."
+    "### Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian $$ \\frac{\\partial x_i}{\\partial y_j}, $$ where $x_i \\in \\{r,\\theta,\\phi\\}$ and $y_i \\in \\{x,y,z\\}$. We would normally compute its inverse, but since none of the quantities we need to transform have upper indices, it is not necessary. Then, since both $A_i$ and $E_i$ have one lower index, both will need to be multiplied by the Jacobian."
    ]
   },
   {
@@ -131,13 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the vector potential and electric fields that we need, we will turn our attention to what other quantities we might need for eqs. 14, 16, and 18 from the [$\\giraffe$ paper](https://arxiv.org/pdf/1704.00599.pdf).  We will also need the stress energy tensor $$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$ Note that $T^{\\mu \\nu}_{\\rm EM}$ is in terms of $b^\\mu$ and $u^\\mu$, provided by $\\text{u0_smallb_Poynting__Cartesian}$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Step 4: Calculate $v^i$ from $A_i$ and $E_i$\n",
     "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. "
    ]
   },
@@ -145,16 +144,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Step 4: Calculate v^i from A_i and E_i\n",
+    "# Step 4a: Calculate the magnetic field B^i\n",
     "# Here, we build the Levi-Civita tensor from the Levi-Civita symbol.\n",
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
@@ -163,7 +156,7 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
-    "            LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gammadet)\n",
+    "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gammadet)\n",
     "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n",
     "\n",
     "# For the initial data, we can analytically take the derivatives of A_i\n",
@@ -183,23 +176,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now build the drift velocity using equation 152 in [this paper,](https://arxiv.org/pdf/1310.3274v2.pdf) cited in the original $\\giraffe$ code: $$ v^i = \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i. $$ Then, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$.\n"
+    "We will now build the initial velocity using equation 152 in [this paper,](https://arxiv.org/pdf/1310.3274v2.pdf) cited in the original $\\giraffe$ code: $$ v^i = \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i. $$ \n",
+    "However, our code needs the Valencia 3-velocity while this expression is for the drift velocity. So, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$.\n",
+    "Thus, $$\\bar{v}^i = \\frac{\\epsilon^{ijk} E_j B_k}{B^2}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0*M*xx1*(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)/((xx0**2 + xx1**2)*sqrt(2*M/sqrt(xx0**2 + xx1**2 + xx2**2) + 1))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Step 4b: Calculate B^2 and B_i\n",
     "# B^2 is an inner product defined in the usual way:\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(DIM):\n",
@@ -212,15 +200,12 @@
     "    for j in range(DIM):\n",
     "        BD[i] = gammaDD[i][j] * BU[j]\n",
     "\n",
-    "driftvU = ixp.zerorank1()\n",
+    "# Step 4c: Calculate the Valencia 3-velocity \n",
+    "ValenciavU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
-    "    driftvU[i] = -betaU[i]\n",
     "    for j in range(DIM):\n",
-    "        driftvU[i] += alpha*LeviCivitaUUU[i][j][k]*ED[j]*BD[k]/B2\n",
-    "\n",
-    "for i in range(DIM):\n",
-    "    ValenciavU[i] = (driftvU[i] + betaU[i])/alpha\n",
-    "print(ValenciavU[1])"
+    "        for k in range(DIM):\n",
+    "            ValenciavU[i] += LeviCivitaUUU[i][j][k]*ED[j]*BD[k]/B2"
    ]
   },
   {
@@ -244,6 +229,7 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
@@ -255,12 +241,12 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::M_PI\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
-      "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
       "AD[0] - gfho.AD[0] = 0\n",
       "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
       "AD[1] - gfho.AD[1] = 0\n",
-      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = -2*M*gammaDD02*xx0*(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)/(gammaDD22*(xx0**2 + xx1**2)*sqrt(2*M/sqrt(xx0**2 + xx1**2 + xx2**2) + 1)) - 2*M*gammaDD12*xx1*(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)/(gammaDD22*(xx0**2 + xx1**2)*sqrt(2*M/sqrt(xx0**2 + xx1**2 + xx2**2) + 1))\n",
       "AD[2] - gfho.AD[2] = 0\n"
      ]
     }
@@ -277,40 +263,32 @@
     "\n",
     "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "\n",
-    "print(\"Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
-    "# todo: ValenciavU,AD\n",
+    "print(\"Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
     "\n",
     "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
     "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
