Added a basic table of contents.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -5,9 +5,10 @@
    "metadata": {},
    "source": [
     "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
+    "<a id='top'></a>\n",
     "# $\\giraffe$: Solving GRFFE equations at a higher Finite Differencing order\n",
     "\n",
-    "### NRPy+ Source Code for this module: [Tutorial-GiRaFFE_Higher_Order.py](../edit/Tutorial-GiRaFFE_Higher_Order.py), which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFE_Higher_Order.ipynb) on using NRPy+ to construct GRFFE evolution equations and initial data as SymPy expressions."
+    "### NRPy+ Source Code for this module: [Tutorial-GiRaFFE_Higher_Order.py](../edit/Tutorial-GiRaFFE_Higher_Order.py), which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFE_Higher_Order.ipynb) on using NRPy+ to construct GRFFE evolution equations and initial data as SymPy expressions.\n"
    ]
   },
   {
@@ -21,7 +22,26 @@
     "Similar to the other ETK modules we have built, we will construct the WaveToyNRPy module in two steps.\n",
     "\n",
     "1. Call on NRPy+ to convert the SymPy expressions for the evolution equations into one C-code kernel.\n",
-    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module.\n"
+    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module.\n",
+    "\n",
+    "#### Table of Contents:\n",
+    "1. [Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each.](#step1)\n",
+    "1. [Interfacing with the Einstein Toolkit](#step2)\n",
+    "    1. [Constructing the Einstein Toolkit C-code calling functions that include the C code kernels](#step2a)\n",
+    "    1. [CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure](#step2b)\n",
+    "        1. [interface.ccl](#step2b.i)\n",
+    "        1. [param.ccl](#step2b.ii)\n",
+    "        1. [schedule.ccl](#step2b.iii)\n",
+    "    1. [Add the C file to Einstein Toolkit compilation list.](#step2c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each. \n",
+    "<a id='step1'></a>\n",
+    "\\[Back to [top](#top)\\]\n"
    ]
   },
   {
@@ -137,17 +157,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-AD_dD01/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) + AD_dD10/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_10.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_8.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_6.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_4.h\"\n",
       "Wrote to file \"GiRaFFE_HO/src/B_from_A_2.h\"\n",
-      "Error: Unregistered variable \"AD_ddnD20\" in SymPy expression\n",
-      "All variables in SymPy expressions passed to FD_outputC() must be registered\n",
-      "in NRPy+ as either a gridfunction or Cparameter, by calling\n",
-      "AD_ddnD20 = register_gridfunctions...() (in ixp/grid) if \"AD_ddnD20\" is a gridfunction, or\n",
-      "AD_ddnD20 = Cparameters() (in par) otherwise (e.g., if it is a free parameter set at C runtime).\n"
+      "Error: Variable AD_dupD20 implies an upwind derivative, but NRPy+'s upwinding\n",
+      "  algorithm requires that up or downwinding be with respect to some upwinding\n",
+      "  control variable, set as FD_outputC()'s fourth function argument\n",
+      "  Note that in BSSN, the shift vector betaU controls the upwinding.\n",
+      "  See https://arxiv.org/pdf/gr-qc/0206072.pdf for motivation and\n",
+      "  https://arxiv.org/pdf/gr-qc/0109032.pdf for implementation details,\n",
+      "  at second order. Note that the BSSN shift vector behaves like a *negative*\n",
+      "  velocity. See http://www.damtp.cam.ac.uk/user/naweb/ii/advection/advection.php\n",
+      "  for a very basic example motivating this choice.\n"
      ]
     },
     {
@@ -157,8 +180,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-8e4324e03df8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     50\u001b[0m                 \u001b[0mBU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mLeviCivitaUUU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mAD_dD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m \u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFD_outputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GiRaFFE_HO/src/B_from_A_2x0D.h\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset_BU_to_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outCverbose=False\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0mAD_dupD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeclarerank2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AD_dupD\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"nosym\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/penelson/juppp/nrpytutorial/finite_difference.py\u001b[0m in \u001b[0;36mFD_outputC\u001b[0;34m(filename, sympyexpr_list, params, upwindcontrolvec)\u001b[0m\n\u001b[1;32m     81\u001b[0m                     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" = register_gridfunctions...() (in ixp/grid) if \\\"\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\\" is a gridfunction, or\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m                     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" = Cparameters() (in par) otherwise (e.g., if it is a free parameter set at C runtime).\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m                     \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m                 \u001b[0mlist_of_deriv_vars_with_duplicates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;31m#            elif vartype == \"gridfunction\":\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-c3cc596dbbb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m                 \u001b[0mBU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mLeviCivitaUUU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mAD_dD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m \u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFD_outputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"GiRaFFE_HO/src/B_from_A_2x0U.h\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset_BU_to_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outCverbose=False\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/penelson/juppp/nrpytutorial/finite_difference.py\u001b[0m in \u001b[0;36mFD_outputC\u001b[0;34m(filename, sympyexpr_list, params, upwindcontrolvec)\u001b[0m\n\u001b[1;32m     73\u001b[0m                         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  velocity. See http://www.damtp.cam.ac.uk/user/naweb/ii/advection/advection.php\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m                         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  for a very basic example motivating this choice.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m                         \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m                     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: global name 'exit' is not defined"
      ]
     }
@@ -192,7 +215,6 @@
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
-    "print(BU[2])\n",
     "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_10.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 8)\n",
@@ -207,17 +229,18 @@
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
     "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
-    "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
-    "for i in range(DIM):\n",
-    "    BU[i] = 0\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            if j is 0:\n",
-    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
-    "            else:\n",
-    "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
+    "#AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
+    "#for i in range(DIM):\n",
+    "#    BU[i] = 0\n",
+    "#    for j in range(DIM):\n",
+    "#        for k in range(DIM):\n",
+    "#            if j is 0:\n",
+    "#                BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
+    "#            else:\n",
+    "#                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
-    "fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "#fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0D.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
     "AD_dupD = ixp.declarerank2(\"AD_dupD\",\"nosym\")\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
@@ -278,8 +301,11 @@
    "metadata": {},
    "source": [
     "### Step 2: Interfacing with the Einstein Toolkit\n",
+    "<a id='step2'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
+    "<a id='step2a'></a>\n",
     "\n",
     "Now that we have generated the C code kernel *GiRaFFE_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below).\n",
     "\n",
@@ -1286,6 +1312,8 @@
    "metadata": {},
    "source": [
     "#### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "<a id='step2b.i'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
@@ -1374,6 +1402,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step2b.ii'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "2. $\\text{param.ccl}$: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). A number of parameters are defined, and more parameters can be easily added in later versions. We also set the number of timelevels we will store in memory."
    ]
   },
@@ -1447,6 +1477,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step2b.iii'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
     "We first assign storage for both scalar gridfunctions, and then specify the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run."
@@ -1700,6 +1732,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step2c'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
     "#### Step 2c: Add the C file to Einstein Toolkit compilation list.\n",
     "\n",
     "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
